nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.26-alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: templates
              mountPath: /etc/nginx/templates
      volumes:
        - name: templates
          configMap:
            name: nginx-templates
            defaultMode: 0444
